97000 bio queries aren't ok

--- a/src/Notes.ipynb
+++ b/src/Notes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "022efe5d",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "b35f8e9e",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "a2f01a52",
    "metadata": {},
    "outputs": [],
@@ -42,17 +42,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "8efb8bd9",
+   "execution_count": 19,
+   "id": "e1263b57",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Whoops! That makes 97496 bio queries.\n",
+      "55.374194 3.645059\n"
+     ]
+    }
+   ],
    "source": [
     "# All possible combinations of lats & lons\n",
     "\n",
-    "#lats_and_lons = np.array(np.meshgrid(lats, lons)).T.reshape(-1, 2)\n",
-    "#MemoryError\n",
-    "# TODO: instead of creating an object in memory, try a generator"
+    "n_pairs = len(lats)*len(lons)\n",
+    "n_pairs/1000000000\n",
+    "\n",
+    "print(f\"Whoops! That makes {round(n_pairs/1000000000)} bio queries.\")\n",
+    "\n",
+    "lat_lon_gen = ((i,j) for i in lats for j in lons)\n",
+    "\n",
+    "for i in range(n_pairs):\n",
+    "    p = next(lat_lon_gen)\n",
+    "    print(p[0], p[1])\n",
+    "    break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8efb8bd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('a', 1)\n",
+      "('a', 2)\n",
+      "('a', 3)\n",
+      "('a', 4)\n",
+      "('b', 1)\n",
+      "('b', 2)\n",
+      "('b', 3)\n",
+      "('b', 4)\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
